// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing <SelectionCard /> component creates snapshot 1`] = `
<DocumentFragment>
  <button
    class="selection-card"
  >
    <div
      class="selection-card__icon-container"
    >
      <i
        class="fas fa-chalkboard-teacher"
        data-testid="main-icon"
      />
    </div>
    <h2
      class="selection-card__description"
    >
      some description
    </h2>
    <p
      class="selection-card__extra-info"
    >
      some info
    </p>
  </button>
</DocumentFragment>
`;

exports[`testing <SelectionCard /> component creates snapshot 2`] = `
<DocumentFragment>
  <button
    class="selection-card"
  >
    <div
      class="selection-card__icon-container"
    >
      <i
        class="fas fa-chalkboard-teacher"
        data-testid="main-icon"
      />
    </div>
    <h2
      class="selection-card__description"
    >
      some description
    </h2>
  </button>
</DocumentFragment>
`;
